--- a/index.html
+++ b/index.html
@@ -423,3 +423,13 @@ figure {
             </ol>
         </div>
     </section>
+
+    <section id="bibtex">
+        <h2>Citation</h2>
+        <hr>
+        <pre><code>@article{xiong2023doctorglm,
+            title={DoctorGLM: Fine-tuning your Chinese Doctor is not a Herculean Task}, 
+            author={Honglin Xiong and Sheng Wang and Yitao Zhu and Zihao Zhao and Yuxiao Liu and Qian Wang and Dinggang Shen},
+      }
+        </code></pre>
+    </section>
