--- a/index.html
+++ b/index.html
@@ -428,8 +428,9 @@ figure {
         <h2>Citation</h2>
         <hr>
         <pre><code>@article{xiong2023doctorglm,
-            title={DoctorGLM: Fine-tuning your Chinese Doctor is not a Herculean Task}, 
-            author={Honglin Xiong and Sheng Wang and Yitao Zhu and Zihao Zhao and Yuxiao Liu and Qian Wang and Dinggang Shen},
+        title={DoctorGLM: Fine-tuning your Chinese Doctor is not a Herculean Task}, 
+        author={Honglin Xiong, Sheng Wang, Yitao Zhu, Zihao Zhao, 
+            Yuxiao Liu, Linlin Huang, Qian Wang, Dinggang Shen},
       }
         </code></pre>
     </section>
