--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@ figure {
 <script type="text/javascript" src="../js/hidebib.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,400italic,600italic,300,300italic' rel='stylesheet' type='text/css'>
     <head>
-        <title>ChatDoctor: A Medical Chat Model Fine-tuned on LLaMA Model using Medical Domain Knowledge</title>
-        <meta property="og:description" content="ChatDoctor: A Medical Chat Model Fine-tuned on LLaMA Model using Medical Domain Knowledge"/>
+        <title>DoctorGLM: Fine-tuning your Chinese Doctor is not a Herculean Task</title>
+        <meta property="og:description" content="DoctorGLM: Fine-tuning your Chinese Doctor is not a Herculean Task"/>
         <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:creator" content="@ArashVahdat">
-        <meta name="twitter:title" content="ChatDoctor: A Medical Chat Model Fine-tuned on LLaMA Model using Medical Domain Knowledge">
-        <meta name="twitter:description" content="ChatDoctor: A Medical Chat Model Fine-tuned on LLaMA Model using Medical Domain Knowledge">
+        <meta name="twitter:title" content="DoctorGLM: Fine-tuning your Chinese Doctor is not a Herculean Task">
+        <meta name="twitter:description" content="DoctorGLM: Fine-tuning your Chinese Doctor is not a Herculean Task">
         <meta name="twitter:image" content="">
     </head>
 
