--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ figure {
             <div class="col-4 text-center"><a href="">Yuxiao Liu</a><sup>1</sup></div>
             <div class="col-4 text-center"><a href="">Linlin Huang</a><sup>4</sup></div>
             <div class="col-4 text-center"><a href="">Qian Wang</a><sup>1,3</sup></div>
-            <div class="col-4 text-center"><a href="">Dinggang Sheng</a><sup>1,3</sup></div>
+            <div class="col-4 text-center"><a href="">Dinggang Shen</a><sup>1,3</sup></div>
         </div>
 
         <center>
